# api/controllers/table-booking/booked-my-tables-user-list.js
@@ -4,14 +4,13 @@
  */
 
 /* global _, ProfileManagers, sails */
-const _ = require('lodash');
 
 module.exports = async function list(request, response) {
   try {
-    const { paymentSuccess } = UseDataService; // Assuming this is defined in UseDataService
-    const requestQuery = request.allParams();
-    const filteredQueryData = _.pick(requestQuery, ['page', 'limit']);
-    const excludeFields = ['created_at', 'updated_at', 'payment_details','refund_details','order_id','payment_id','seats']; // Fields to omit from results
+    const { phoneCrypto, paymentSuccess } = UseDataService; // Assuming this is defined in UseDataService
+    const requestQuery =  request.query;
+    const filteredQueryData = _.pick(requestQuery, ['page', 'limit','table_id']);
+    const selectFields = ['id','user_id','table_id','creator_id','user_details']
 
     // Input validation schema
     const inputAttributes = [
@@ -21,8 +20,8 @@ module.exports = async function list(request, response) {
 
     async function buildCriteria() {
       let criteria = {}
-
-      criteria.creator_id= ProfileMemberId(request)
+      criteria.table_id = filteredQueryData.table_id
+      criteria.creator_id = ProfileMemberId(request)
       criteria.status = paymentSuccess;
 
       return criteria;
@@ -33,19 +32,21 @@ module.exports = async function list(request, response) {
     validateModel.validate(TableBooking, inputAttributes, filteredQueryData, async (valid, errors) => {
       if (valid) {
         const page = parseInt(filteredQueryData.page) || 1;
-        const limit = parseInt(filteredQueryData.limit) || 10;
+        const limit = parseInt(filteredQueryData.limit) || 5;
         const skip = (page - 1) * limit;
 
         let criteria = await buildCriteria();
         // Fetch data with pagination
         const [items, totalItems] = await Promise.all([
-          TableBooking.find({ where:criteria })
+          TableBooking.find({ where: criteria })
             .skip(skip)
             .limit(limit)
-            .omit(excludeFields),
-          TableBooking.count({ where:criteria })
+            .select(selectFields),
+            // .omit(excludeFields),
+          TableBooking.count({ where: criteria })
         ]);
 
+        
         // Use the refactored sendResponseList function
         await UseDataService.sendResponseList({
           items,
@@ -54,8 +55,8 @@ module.exports = async function list(request, response) {
           limit,
           response,
           inputAttributes,
-          filePath: __filename,
-          message:'Booked users list'
+          // filePath: __filename,
+          message: 'Booked users list'
 
         });
       } else {
